# orbie

./: README.md  pyproject.toml  test.sh
example/: pyproject.toml
example/src/example/example_a/: example_a.py  sibling.py
example/src/example/example_a/children/: child.py
example/src/example/example_a/children/grandchildren/: grandchild.py
example/src/example/example_a/nephews/: nephew.py
example/src/example/example_b/: example_b.py
example/src/example/example_c/: example_c.py  sibling.py
example/src/example/example_c/children/: child.py
example/src/example/example_d/: example_d.py
example/src/example/example_shared/: shared.py
src/orbie/: orbie.py
