[project]
name = "example"
version = "0.1.0"
description = "An example project structure for testing Tangela"
authors = [
    {name = "Michael Ho",email = "michael.ho@ieee.org"},
]
dependencies = [
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "orbie @ file:///${PROJECT_ROOT}/../dist/orbie-0.1.3-py3-none-any.whl",
]
